src/objects/SPE_WeightageLogic__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Cluster</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logic__c</fullName>
        <label>Logic</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Weightage Logic</label>
</CustomObject>